--- a/package.json
+++ b/package.json
@@ -10,17 +10,21 @@
   },
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/bottom-tabs": "^7.2.0",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
+    "arabic-reshaper": "^1.1.0",
     "axios": "^1.7.9",
-    "expo": "~52.0.37",
+    "bidi": "^0.0.1",
+    "expo": "~52.0.41",
+    "expo-camera": "~16.0.18",
     "expo-status-bar": "~2.0.1",
+    "got": "^14.4.6",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
-    "react-native-gesture-handler": "^2.24.0",
+    "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
     "react-native-swipe-gestures": "^1.0.5"
   },
