adding tts apis

--- a/package.json
+++ b/package.json
@@ -18,14 +18,19 @@
     "axios": "^1.7.9",
     "bidi": "^0.0.1",
     "expo": "~52.0.41",
+    "expo-av": "^15.0.2",
     "expo-camera": "~16.0.18",
+    "expo-file-system": "^18.0.12",
     "expo-status-bar": "~2.0.1",
     "got": "^14.4.6",
     "jwt-decode": "^4.0.0",
     "react": "18.3.1",
     "react-native": "0.76.7",
+    "react-native-blob-util": "^0.21.2",
+    "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-sound": "^0.11.2",
     "react-native-swipe-gestures": "^1.0.5"
   },
   "devDependencies": {
