--- a/package.json
+++ b/package.json
@@ -11,12 +11,13 @@
   "dependencies": {
     "@expo/vector-icons": "^14.0.4",
     "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-community/slider": "^4.5.6",
     "@react-navigation/bottom-tabs": "^7.2.0",
+    "@react-navigation/drawer": "^7.3.8",
     "@react-navigation/native-stack": "^7.2.0",
     "@react-navigation/stack": "^7.1.1",
     "arabic-reshaper": "^1.1.0",
     "axios": "^1.7.9",
-    "bidi": "^0.0.1",
     "expo": "~52.0.41",
     "expo-av": "^15.0.2",
     "expo-camera": "~16.0.18",
@@ -30,8 +31,10 @@
     "react-native-fs": "^2.20.0",
     "react-native-gesture-handler": "~2.20.2",
     "react-native-linear-gradient": "^2.8.3",
+    "react-native-simple-audio-player": "^1.0.3",
     "react-native-sound": "^0.11.2",
-    "react-native-swipe-gestures": "^1.0.5"
+    "react-native-swipe-gestures": "^1.0.5",
+    "react-native-reanimated": "~3.16.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
